# web3-agent-kit

./: .editorconfig  .env.example  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_PLATFORMS.md  GOVERNANCE.md  LICENSE  README.md  RISKS.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dco.yml  docs.yml  publish.yml  release-please-draft.yml  release-please.yml  scorecard.yml
adr/adr-001-public-rpc-defaults/: index.html
adr/adr-002-builder-pattern/: index.html
adr/adr-003-multi-source-oracle/: index.html
api-server/: index.html
api/account_abstraction/: index.html
api/agent/: index.html
api/airdrop/: index.html
api/bridge/: index.html
api/chain/: index.html
api/defi/: index.html
api/events/: index.html
api/governance/: index.html
api/llm/: index.html
api/messaging/: index.html
api/mev/: index.html
api/nft/: index.html
api/oracle/: index.html
api/portfolio/: index.html
api/security/: index.html
api/simulator/: index.html
api/sniper/: index.html
api/trading/: index.html
api/wallet/: index.html
blog/: devto_article.md  post.md  show-hn.md
blog/comparison-vs-alternatives/: index.html
changelog/: index.html
cli/: index.html
contributing/: index.html
contributing-platforms/: index.html
docs/: api-server.md  changelog.md  cli.md  contributing-platforms.md  contributing.md  examples.md  features.md  getting-started.md  index.md  security-model.md  versioning-policy.md
docs/adr/: adr-001-public-rpc-defaults.md  adr-002-builder-pattern.md  adr-003-multi-source-oracle.md
docs/api/: account_abstraction.md  agent.md  airdrop.md  bridge.md  chain.md  defi.md  events.md  governance.md  llm.md  messaging.md  mev.md  nft.md  oracle.md  portfolio.md  security.md  simulator.md  sniper.md  trading.md  wallet.md
docs/blog/: comparison-vs-alternatives.md
docs/promotion/: awesome-list-submissions.md  hn-post-draft.md
docs/stylesheets/: extra.css
examples/: airdrop_farmer.py  airdrop_suite.py  api_server.py  approval_manager.py  bridge_agent.py  dca_bot.py  direct_swap.py  gas_optimizer.py  index.html  llm_swap_agent.py  multi_wallet.py  plugin_system.py  portfolio_dashboard.py  portfolio_tracker.py  security_analysis.py  sniper_bot.py  swap_agent.py  token_sniper.py  wallet_watcher.py  yield_optimizer.py
features/: index.html
getting-started/: index.html
mcp_server/: README.md  __init__.py
promotion/awesome-list-submissions/: index.html
promotion/hn-post-draft/: index.html
research/: airdrop_landscape_2026.md
research/airdrop_landscape_2026/: index.html
search/: search_index.json
security-model/: index.html
showcase/telegram-bot/: .env.example  README.md  bot.py  demo.py  requirements.txt
src/: __init__.py  agent.py  approval_manager.py  bridge.py  chain.py  dca_bot.py  gas_optimizer.py  llm.py  multi_wallet.py  portfolio.py  sniper.py  wallet.py  wallet_watcher.py  yield_optimizer.py
src/account_abstraction/: __init__.py
src/agent/: __init__.py  core.py  llm.py
src/airdrop/: __init__.py  base.py  dashboard.py  discovery.py  faucet.py  form_filler.py  galxe.py  gleam.py  multi_wallet.py  onchain.py  referral.py  scheduler.py  social.py  wl_grinder.py  zealy.py
src/api/: __init__.py  models.py
src/bridge/: __init__.py  bridge.py
tests/: test_aggregator.py  test_airdrop.py  test_airdrop_new_modules.py  test_api.py  test_approval.py  test_auto_compound.py  test_bridge.py  test_core.py  test_core_modules.py  test_dca_bot.py  test_defi.py  test_defi_extended.py  test_executor.py  test_fuzz.py  test_gas.py  test_integration.py  test_llm.py  test_mev.py  test_multi_wallet.py  test_new_features.py  test_nft.py  test_notifications.py  test_oracle.py  test_platforms.py  test_plugins.py  test_portfolio.py  test_restaking.py  test_security.py  test_simulator.py  test_sniper.py  test_solana_client.py  test_solana_dex.py  test_solana_lp.py  test_solana_nft.py  test_solana_wallet.py  test_uniswap_v3.py  test_wallet.py  test_watcher.py  test_yield_optimizer.py
versioning-policy/: index.html
web3_agent_kit/: __init__.py
(+154 files in other folders)
