[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web3-agent-kit"
version = "1.9.0"
description = "Open-source framework for building autonomous AI agents that interact with blockchain networks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Maulana", email = "khasbim240803@gmail.com"},
]
keywords = ["web3", "ai", "agent", "blockchain", "defi", "ethereum", "uniswap", "llm", "yield", "multi-wallet", "plugins"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "click>=8.0",
    "rich>=13.0",
]
[project.scripts]
wak = "src.cli:main"


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ulsreall/web3-agent-kit"
Repository = "https://github.com/ulsreall/web3-agent-kit"
Issues = "https://github.com/ulsreall/web3-agent-kit/issues"
Documentation = "https://ulsreall.github.io/web3-agent-kit/"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*", "showcase/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]
show_missing = true
fail_under = 40

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
